erDiagram
    USER ||--o{ FOCUS_RECORD : "创建"
    USER ||--o{ USER_BAG : "拥有"
    USER ||--o{ GARDEN_TILE : "管理"
    USER ||--o{ FRIENDSHIP : "发起"
    USER ||--o{ FRIENDSHIP : "接收"
    USER ||--o{ VISIT_LOG : "访问者"
    USER ||--o{ VISIT_LOG : "主人"
    
    PLANT_DICT ||--o{ USER_BAG : "来源"
    USER_BAG ||--o| GARDEN_TILE : "种植"
    
    USER {
        bigint user_id PK
        varchar account UK
        varchar password
        varchar nickname
        int avatar_id
        int time_flux
        int streak_days
        varchar last_focus_date
        bigint last_focus_time
        tinyint status
    }
    
    FOCUS_RECORD {
        char record_id PK
        bigint user_id FK
        varchar task_name
        int duration_minutes
        bigint start_time
        varchar signature
        bigint sync_time
    }
    
    PLANT_DICT {
        int plant_id PK
        varchar plant_name
        varchar description
        int drop_weight
        varchar resource_code
        varchar image_url
        varchar color_hex
        int purify_range
        int width
        int scale
        tinyint status
    }
    
    USER_BAG {
        char bag_id PK
        bigint user_id FK
        int plant_id FK
        tinyint status
        bigint obtain_at
    }
    
    GARDEN_TILE {
        bigint tile_id PK
        bigint user_id FK
        int x
        int y
        int plant_id FK
        char bag_record_id FK
        bigint deploy_time
        bigint last_charge_time
        tinyint is_purified
    }
    
    FRIENDSHIP {
        bigint id PK
        bigint user_id FK
        bigint friend_id FK
        tinyint status
    }
    
    VISIT_LOG {
        bigint log_id PK
        bigint visitor_id FK
        bigint host_id FK
        tinyint action_type
        varchar content
        tinyint is_read
    }
